--- a/behaviour.html
+++ b/behaviour.html
@@ -16,5 +16,6 @@
 an example in a JavaScript book. I'm looking for something to make my life more
 exciting.</p>
   <p> first commit</p>
+  <p> second commit </p>
  </body>
 </html>
